# anypy

./: README.md  env.yaml  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
0.0/: 404.html  index.html
0.0/search/: search_index.json
0.1/: 404.html  index.html
0.1/search/: search_index.json
conf/: default.yaml
conf/nn/: default.yaml
docs/: index.md
notebooks/recipes/: hydraconf_notebook.ipynb  savefig_pdf.ipynb  savefig_sns_pdf.ipynb
src/anypy/benchmark/: chrono.py
src/anypy/data/: metadata_dataset_dict.py
src/anypy/latex/: __init__.py  dataframe.py
src/anypy/nn/: blocks.py  dynccn.py  dyncnn.py  utils.py
src/tolpy/: run.py
src/tolpy/pl_modules/: pl_module.py
src/tolpy/ui/: run.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_package.py  test_resume.py
tests/benchmark/: test_chrono.py
tests/data/: test_metadata_dataset_dict.py
tests/latex/: test_dataframe.py
tests/nn/: test_blocks.py  test_dyncnn.py  test_utils.py
