[metadata]
name = tolpy
description = A collection of python utilities, without hard dependencies
url = https://github.com/lucmos/tolpy
long_description = file: README.md
author = Luca Moschella
author_email = luca.moschella94@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    # Only stable stuff usually backward compatible

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
